# wslc-rs

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  agent.md  wslc-rust-api-design.md
.cargo-home-temp/: .global-cache
.github/workflows/: ci.yml  wslc-network-e2e.yml
crates/wslc/: Cargo.toml  README.md
crates/wslc-sys/: Cargo.toml  README.md
crates/wslc-sys/src/: lib.rs  runtime.rs
crates/wslc/examples/: container_inspect.rs  hello.rs  list_images.rs  service_info.rs  vhd_volume.rs
crates/wslc/examples/common/: mod.rs
crates/wslc/src/: com.rs  container.rs  error.rs  image.rs  lib.rs  process.rs  raw.rs  registry.rs  service.rs  session.rs  storage.rs  strings.rs
crates/wslc/tests/: api_contract.rs  integration_smoke.rs
docs/: api-design.md  architecture.md  build-and-linking.md  error-model.md  ffi-and-safety.md  implementation-checklist.md  research-notes.md  roadmap.md  sdk-installation.md
docs/superpowers/plans/: 2026-07-04-wslc-rs-mvp.md
examples/: hello.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: validate_options.rs
