[workspace]
members = [
    "crates/wslc",
    "crates/wslc-sys",
]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Ivanbeethoven/wslc-rs"
homepage = "https://github.com/Ivanbeethoven/wslc-rs"
readme = "README.md"
rust-version = "1.80"
keywords = ["wsl", "containers", "windows", "ffi"]
categories = ["api-bindings", "os::windows-apis"]

[workspace.dependencies]
wslc-sys = { version = "0.1.1", path = "crates/wslc-sys" }
