[package]
name = "wslc-sys"
description = "Raw Rust FFI types for Microsoft WSL Container SDK"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
exclude = ["tests/*"]

[lib]
name = "wslc_sys"
path = "src/lib.rs"

[features]
default = []
