[package]
name = "wslc"
description = "Safe Rust wrapper for Microsoft WSL Containers"
version = "0.1.7"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[lib]
name = "wslc"
path = "src/lib.rs"

[dependencies]
wslc-sys.workspace = true

[features]
default = []
integration = []
